--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -2,9 +2,9 @@ name: Build on Windows.
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ workflow-master ]
   pull_request:
-    branches: [ dev ]
+    branches: [ workflow-master ]
 
 env:
   CARGO_TERM_COLOR: always
