first test of artifact

--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -18,3 +18,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build
       run: cargo build --release
+    - uses: actions/upload-artifact@v2
+      with:
+        name: librespot
+        path: \librespot\librespot # or path/to/artifact
