--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -22,3 +22,7 @@ jobs:
       with:
         name: librespot
         path: target/release # or path/to/artifact
+    - uses: actions/upload-artifact@v2
+      with:
+        name: librespot.exe
+        path: target/release/librespot.exe
