--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,8 @@ jobs:
      runs-on: ubuntu-latest
      steps:
      - uses: actions/checkout@v2
-     - run: cargo build --release
+     - run: sudo apt-get update && sudo apt-get install libpulse-dev portaudio19-dev libasound2-dev libsdl2-dev gstreamer1.0-dev libgstreamer-plugins-base1.0-dev libavahi-compat-libdnssd-dev
+            && cargo build --release
      - uses: actions/upload-artifact@v2
        with:
         name: librespot-linux-x64
