--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
      runs-on: macos-latest
      steps:
      - uses: actions/checkout@v2
+     - name: Build
      - run: cargo build --release
      - uses: actions/upload-artifact@v2
        with:
@@ -35,6 +36,7 @@ jobs:
      runs-on: ubuntu-latest
      steps:
      - uses: actions/checkout@v2
+     - name: Build
      - run: sudo apt-get update && sudo apt-get install libpulse-dev portaudio19-dev libasound2-dev libsdl2-dev gstreamer1.0-dev libgstreamer-plugins-base1.0-dev libavahi-compat-libdnssd-dev
             && cargo build --release
      - uses: actions/upload-artifact@v2
