--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-      run: cargo build --release
+    - run: cargo build --release
     - uses: actions/upload-artifact@v2
       with:
         name: librespot-win-x64.exe
