miss typed command

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
      - run: rustup target add aarch64-apple-darwin && cargo build --target=aarch64-apple-darwin --release
      - uses: actions/upload-artifact@v2
        with:
-        run: cd /target/release/
+        run: ls /target/release/
         name: librespot-mac-arm64
         path: target/release/librespot
     
