--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,9 +37,8 @@ jobs:
      - run: rustup target add aarch64-apple-darwin && cargo build --target=aarch64-apple-darwin --release
      - uses: actions/upload-artifact@v2
        with:
-        run: ls /target/release/
         name: librespot-mac-arm64
-        path: target/release/librespot
+        path: target/release/
     
         
   linux-build:
