--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
      - uses: actions/upload-artifact@v2
        with:
         name: librespot-mac-arm64
-        path: target/release/
+        path: target/
     
         
   linux-build:
