build both arm64 and x64 Mac builds
using one job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,22 +24,15 @@ jobs:
      runs-on: macos-latest
      steps:
      - uses: actions/checkout@v2
-     - run: cargo build --release
+     - run: cargo build --release && rustup target add aarch64-apple-darwin && cargo build --target=aarch64-apple-darwin --release
      - uses: actions/upload-artifact@v2
        with:
         name: librespot-mac-x64
         path: target/release/librespot
-        
-  mac-arm64-build:
-     runs-on: macos-latest
-     steps:
-     - uses: actions/checkout@v2
-     - run: rustup target add aarch64-apple-darwin && cargo build --target=aarch64-apple-darwin --release
      - uses: actions/upload-artifact@v2
        with:
         name: librespot-mac-arm64
-        path: target/
-    
+        path: target/aarch64-apple-darwin/release/librespot
         
   linux-build:
      runs-on: ubuntu-latest
