--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build and Release Artifacts
 
 on:
   push:
-    branches: [ workflow-master ]
+    branches: [ master, dev ]
   pull_request:
-    branches: [ workflow-master ]
+    branches: [ master, dev ]
 
 env:
   CARGO_TERM_COLOR: always
